--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "html-sass-boilerplate",
+  "name": "3-column-preview-card-component",
   "version": "1.0.1",
-  "description": "Simple HTML SASS Boilerplate with Parcel",
+  "description": "3-column preview card component - Frontend Mentor Challenge",
   "scripts": {
     "start": "rm -rf public/* && parcel src/index.html --dist-dir public --port 1234 --hmr-port 4326 --host localhost --open",
     "build": "rm -rf public/* && parcel build src/index.html --dist-dir public"
